--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,9 @@
 <head>
   <title>ECommerce</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+	<script src="assets/stylesheets/boot_css.css"></script>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
   <%= csrf_meta_tags %>
 	<!--div id="piktowrapper-embed">
 		<div class="pikto-canvas-wrap">
@@ -20,16 +22,26 @@
 		}(document));
 	</script-->
 </head>
-<body>
-<% if user_signed_in? %>
-    You are currently signed in as <%= current_user.email %>.
-    <%= link_to "Logout", destroy_user_session_path, :method=> :delete%>
-  <% else %>
-    <%= link_to "Sign up!", new_user_registration_path %> or <%= link_to "Sign in", new_user_session_path%>
-  <% end %>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-<%= yield %>
+<!--div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span2">
+      <Sidebar content>
+    </div>
+    <div class="span10"-->
+		<body>
+		<% if user_signed_in? %>
+			You are currently signed in as <%= current_user.email %>.
+			<%= link_to "Logout", destroy_user_session_path, :method=> :delete%>
+		<% else %>
+			<%= link_to "Sign up!", new_user_registration_path %> or <%= link_to "Sign in", new_user_session_path%>
+		<% end %>
+		<p><%= notice %></p>
+		<p><%= alert %></p>
+		<%= yield %>
+		</body>
+    <!--/div>
+  </div>
+</div-->
 
-</body>
+
 </html>
