--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,10 @@
 		<div class="container">
 			<div class="col-md-9 content">
 				<%=yield %>
-			<div class="to-tutorial">
+			<!--div class="to-tutorial">
 			<p><strong>Visit the tutorial now to learn more:</strong></p>
 			<a href="http://www.revillweb.com/tutorials/bootstrap-tutorial/" class="btn btn-success">TO THE TUTORIAL</a>
-			</div>
+			</div!-->
 			</div>
 			<div class="col-md-3">
 			<h2>Resources</h2>
@@ -40,22 +40,7 @@
 			</div>
 
 			<!-- Site footer -->
-			<div class="bottom">
-			<div class="container">
-			<div class="col-md-4">
-			<h3><span class="glyphicon glyphicon-heart"></span> Footer section 1</h3>
-			<p>Content for the first footer section.</p>
-			</div>
-			<div class="col-md-4">
-			<h3><span class="glyphicon glyphicon-star"></span> Footer section 2</h3>
-			<p>Content for the second footer section.</p>
-			</div>
-			<div class="col-md-4">
-			<h3><span class="glyphicon glyphicon-music"></span> Footer section 3</h3>
-			<p>Content for the third footer section.</p>
-			</div>
-		</div>
-	</div>
+		
 	<% if !user_signed_in? %>
 		<p class="notice_msg"><%= notice %></p>
 		<p class="alert_msg"><%= alert %></p>
