--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,6 @@
 
 		<link href="includes/style.css" rel="stylesheet">
 	    <!-- Include bootstrap CSS -->
-		<link href="/assets/bootstrap.min.css" rel="stylesheet">
 		<link href="/assets/style.css" rel="stylesheet">
   <%= csrf_meta_tags %>
 </head>
@@ -26,15 +25,15 @@
 			</div!-->
 			</div>
 			<div class="col-md-3">
-			<h2>Resources</h2>
-				<ul class="nav nav-pills nav-stacked">
+			<h2>New Arrivals!!!</h2>
+				<!--ul class="nav nav-pills nav-stacked">
 					<li><a href="http://getbootstrap.com/" target="_blank">Download Twitter Bootstrap</a></li>
 					<li><a href="https://www.bootstrapresponsivethemes.com/" target="_blank">Bootstrap Responsive Themes</a></li>
 					<li><a href="http://amzn.to/1iO8NBg" target="_blank">UK: HTML & CSS: Design and Build Web Sites</a></li>
 					<li><a href="http://amzn.to/1lESKDp" target="_blank">UK: Bootstrap Site Blueprints</a></li>
 					<li><a href="http://amzn.to/1oXAbu6" target="_blank">US: HTML & CSS: Design and Build Web Sites</a></li>
 					<li><a href="http://amzn.to/1lESF2w" target="_blank">US: Bootstrap Site Blueprints</a></li>
-				</ul>
+				</ul!-->
 			</div>
 			</div>
 			</div>
