--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,8 +36,8 @@
 	<!-- Site banner -->
 	<div class="banner" >
 	<div class="container" >
-	<h1>Twitter Bootstrap 3: Responsive Design Tutorial</h1>
-	<p>A comprehensive tutorial showing you how to quickly create responsive designs using Twitter Bootstrap 3.</p>
+	<h1>Shop Me</h1>
+	<p>It's amazing how easy the Internet makes it to destroy a business without creating another one in its place.</p>
 	</div>
 	</div>
 
