--- a/app/views/profile_details/_form.html.erb
+++ b/app/views/profile_details/_form.html.erb
@@ -29,6 +29,12 @@
       <%= f.text_field :user_id, :class => 'text_field' %>
     </div>
   </div>
+	<div class="control-group">
+    <%= f.label :avatar, :class => 'control-label' %>
+    <div class="controls">
+	<%= f.file_field :avatar %>
+    </div>
+  </div>
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
