--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,19 +14,26 @@
 					<li><a href="#">About</a></li>
 					<li><a href="#">Contact</a></li>
 					<li><a href="/home/info_graphics">Ecommerce Overview</a></li>
+					
 
 					<% if user_signed_in? %>
 
-						<% if current_user.profile_detail.present? %>
+						<% if !current_user.profile_detail.nil? %>
 						<% @profile_id = ProfileDetail.find_by_user_id(current_user.id) %>
 							<li><%= link_to "Profile", edit_profile_detail_path(@profile_id)%> </li>
 						<%else%>
 							<li><%= link_to "Profile", new_profile_detail_path%> </li>
 						<%end%>
+						<% if User.admin?(current_user) %>
+							<li><%= link_to "Manage customers", users_path %> </li>
+							<li><%= link_to "Retailer requests", retailer_requests_admins_path %> </li>
+							<li><%= link_to "Manage products", users_path %> </li>
+						<% end %>
 						<li><%= link_to "Logout", destroy_user_session_path, :method=> :delete%></li>
 					<% else %>
 						<li><%= link_to "Sign up", new_user_registration_path %> </li>
 						<li> <%= link_to "Sign in", new_user_session_path%></li>
+						<li> <%= link_to "Send retailer request", new_user_registration_path(:retailer=>"Retailer")%></li>
 					<% end %>
 				</ul>
 			</nav>
