--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
 				<span class="glyphicon glyphicon-align-justify"></span>
 			</button>
 			<nav class="navbar-collapse collapse" role="navigation">
-				<ul class="navbar-nav nav">
+				<ul class="navbar-nav nav myMenu" >
 					<li><a href="#">Home</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">Contact</a></li>
@@ -25,12 +25,18 @@
 							<li><%= link_to "Profile", new_profile_detail_path%> </li>
 						<%end%>
 						<% if User.admin?(current_user) %>
-							<li><%= link_to "Manage customers", users_path %> </li>
-							<li><%= link_to "Retailer requests", retailer_requests_admins_path %> </li>
-							<li><%= link_to "Manage products", product_items_path %> </li>
+							<li><%= link_to "Users", users_path %> </li>
+							<li><%= link_to "Retailers", retailer_requests_admins_path %> </li>
+							<li><%= link_to "Products", product_items_path %> 
+							<ul>
+								<li><a href="#">Category</a></li>
+									<li><a href="#">Brand</a></li>
+									<li><a href="#">Assign/a></li>
+							</ul>
+							</li>
 						<%end%>
 						<% if User.retailer?(current_user)%>
-							<li><%= link_to "Manage products", product_items_path %> </li>
+							<li><%= link_to "Products", product_items_path %> </li>
 						<%end%>
 							<li><%= link_to "Logout", destroy_user_session_path, :method=> :delete%></li>
 
@@ -55,5 +61,20 @@
 	<!-- Include jQuery and bootstrap JS plugins -->
 	<script src="/assets/jquery-2.1.0.min.js"></script>
 	<script src="/assets/bootstrap.min.js"></script>
+	<script type="text/javascript">
+	$(document).ready(function() {
+		$('.myMenu > li').bind('mouseover', openSubMenu);
+		$('.myMenu > li').bind('mouseout', closeSubMenu);
+		
+		function openSubMenu() {
+			$(this).find('ul').css('visibility', 'visible');	
+		};
+		
+		function closeSubMenu() {
+			$(this).find('ul').css('visibility', 'hidden');	
+		};
+				   
+	});
+</script>
 </body>
 
