--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,7 +31,7 @@
 							<ul>
 								<li><a href="#">Category</a></li>
 									<li><a href="#">Brand</a></li>
-									<li><a href="#">Assign/a></li>
+									<li><a href="#">Assign</a></li>
 							</ul>
 							</li>
 						<%end%>
