deleted unwanted bootstrap theme

--- a/app/views/product_brands/edit.html.erb
+++ b/app/views/product_brands/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing product_brand</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @product_brand %> |
-<%= link_to 'Back', product_brands_path %>
+<%- model_class = ProductBrand -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
