--- a/app/views/product_categories/_form.html.erb
+++ b/app/views/product_categories/_form.html.erb
@@ -1,21 +1,14 @@
-<%= form_for(@product_category) do |f| %>
-  <% if @product_category.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@product_category.errors.count, "error") %> prohibited this product_category from being saved:</h2>
-
-      <ul>
-      <% @product_category.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @product_category, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :prod_name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :prod_name, :class => 'text_field' %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :prod_name %><br>
-    <%= f.text_field :prod_name %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                product_categories_path, :class => 'btn' %>
   </div>
 <% end %>
