--- a/app/views/product_categories/edit.html.erb
+++ b/app/views/product_categories/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing product_category</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @product_category %> |
-<%= link_to 'Back', product_categories_path %>
+<%- model_class = ProductCategory -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
