--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -136,3 +136,6 @@ html {
 	background-color:#373737;	
 	color:white;
 }
+
+ul.navigation li.highlight{ background:#666;}
+ul.navigation li.highlight a{ color:#f5f5f5; cursor:default; background:#474747}
