assign product items

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,9 +29,9 @@
 							<li><%= link_to "Retailers", retailer_requests_admins_path %> </li>
 							<li><%= link_to "Products", product_items_path %> 
 							<ul>
-								<li><a href="#">Category</a></li>
-									<li><a href="#">Brand</a></li>
-									<li><a href="#">Assign</a></li>
+								<li><a href="/product_categories">Category</a></li>
+									<li><a href="/product_brands">Brand</a></li>
+									<li><a href="/admins/assign">Assign</a></li>
 							</ul>
 							</li>
 						<%end%>
