--- a/app/views/product_categories/_form.html.erb
+++ b/app/views/product_categories/_form.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= f.submit "Create Category", :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
                 product_categories_path, :class => 'btn' %>
   </div>
