--- a/app/views/product_categories/index.html.erb
+++ b/app/views/product_categories/index.html.erb
@@ -1,35 +1,39 @@
 <%- model_class = ProductCategory -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h1>Product Categories</h1>
 </div>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:prod_name) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @product_categories.each do |product_category| %>
-      <tr>
-        <td><%= link_to product_category.id, product_category_path(product_category) %></td>
-        <td><%= product_category.prod_name %></td>
-        <td><%=l product_category.created_at %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_product_category_path(product_category), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      product_category_path(product_category),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% if !@product_categories.present? %>
+	Sorry!! No Categories Found
+<% else %>
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th><%= model_class.human_attribute_name(:id) %></th>
+				<th><%= model_class.human_attribute_name(:prod_name) %></th>
+				<th><%= model_class.human_attribute_name(:created_at) %></th>
+				<th><%=t '.actions', :default => t("helpers.actions") %></th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @product_categories.each do |product_category| %>
+				<tr>
+					<td><%= link_to product_category.id, product_category_path(product_category) %></td>
+					<td><%= product_category.prod_name %></td>
+					<td><%=l product_category.created_at %></td>
+					<td>
+						<%= link_to t('.edit', :default => t("helpers.links.edit")),
+												edit_product_category_path(product_category), :class => 'btn btn-mini' %>
+						<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+												product_category_path(product_category),
+												:method => :delete,
+												:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+												:class => 'btn btn-mini btn-danger' %>
+					</td>
+				</tr>
+			<% end %>
+		</tbody>
+	</table>
+<% end %>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_product_category_path,
