--- a/app/views/product_items/index.html.erb
+++ b/app/views/product_items/index.html.erb
@@ -28,6 +28,7 @@
         <td><%= product_item.is_active %></td>
         <td><%=l product_item.created_at %></td>
         <td>
+				<%= link_to t('.edit', :default => t("helpers.links.edit")),edit_product_item_path(product_item), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),product_item_path(product_item),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %>
         </td>
       </tr>
