changes in view-spelling mistaks

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,8 +28,8 @@
 							<li><%= link_to "Retailers", retailer_requests_admins_path %> </li>
 							<li><%= link_to "Products", product_items_path %> 
 							<ul>
-								<li><a href="/product_categories">Category</a></li>
-									<li><a href="/product_brands">Brand</a></li>
+								<li><a href="/product_categories">Categories</a></li>
+									<li><a href="/product_brands">Brands</a></li>
 									<li><a href="/admins/assign">Assign</a></li>
 							</ul>
 							</li>
