--- a/app/views/product_brands/index.html.erb
+++ b/app/views/product_brands/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = ProductBrand -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h1>Brands</h1>
 </div>
 <% if !@product_brands.present? %>
 	Sorry!! No Brands Found
@@ -9,8 +9,7 @@
 		<thead>
 			<tr>
 				<th><%= model_class.human_attribute_name(:id) %></th>
-				<th><%= model_class.human_attribute_name(:brand_name) %></th>
-				<th><%= model_class.human_attribute_name(:created_at) %></th>
+				<th>Brand</th>
 				<th><%=t '.actions', :default => t("helpers.actions") %></th>
 			</tr>
 		</thead>
@@ -19,7 +18,6 @@
 				<tr>
 					<td><%= link_to product_brand.id, product_brand_path(product_brand) %></td>
 					<td><%= product_brand.brand_name %></td>
-					<td><%=l product_brand.created_at %></td>
 					<td>
 						<%= link_to t('.edit', :default => t("helpers.links.edit")),
 												edit_product_brand_path(product_brand), :class => 'btn btn-mini' %>
@@ -35,6 +33,6 @@
 	</table>
 <% end %>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to t('.new', :default => "Create"),
             new_product_brand_path,
-            :class => 'btn btn-primary' %>
+            :class => 'btn btn-primary', :style=>"color:white;" %>
