--- a/app/views/product_items/index.html.erb
+++ b/app/views/product_items/index.html.erb
@@ -10,9 +10,7 @@
       <th><%= model_class.human_attribute_name(:available_quantity) %></th>
       <th><%= model_class.human_attribute_name(:description) %></th>
       <th><%= model_class.human_attribute_name(:price) %></th>
-      <th><%= model_class.human_attribute_name(:user_id) %></th>
       <th><%= model_class.human_attribute_name(:is_active) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
@@ -24,16 +22,16 @@
         <td><%= product_item.available_quantity %></td>
         <td><%= product_item.description %></td>
         <td><%= product_item.price %></td>
-        <td><%= product_item.user_id %></td>
         <td><%= product_item.is_active %></td>
-        <td><%=l product_item.created_at %></td>
         <td>
+			<%if product_item.user_id == current_user.id %>
 				<%= link_to t('.edit', :default => t("helpers.links.edit")),edit_product_item_path(product_item), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),product_item_path(product_item),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %>
+				<%= link_to t('.destroy', :default => t("helpers.links.destroy")),product_item_path(product_item),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %>
+			<% end %>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),new_product_item_path,:class => 'btn btn-primary' %>
+<%= link_to t('.new', :default => "Create"),new_product_item_path,:class => 'btn btn-primary', :style=>"color:white;" %>
