--- a/app/views/product_items/index.html.erb
+++ b/app/views/product_items/index.html.erb
@@ -2,36 +2,40 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:title) %></th>
-      <th><%= model_class.human_attribute_name(:available_quantity) %></th>
-      <th><%= model_class.human_attribute_name(:description) %></th>
-      <th><%= model_class.human_attribute_name(:price) %></th>
-      <th><%= model_class.human_attribute_name(:is_active) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @product_items.each do |product_item| %>
-      <tr>
-        <td><%= link_to product_item.id, product_item_path(product_item) %></td>
-        <td><%= product_item.title %></td>
-        <td><%= product_item.available_quantity %></td>
-        <td><%= product_item.description %></td>
-        <td><%= product_item.price %></td>
-        <td><%= product_item.is_active %></td>
-        <td>
-			<%if product_item.user_id == current_user.id %>
-				<%= link_to t('.edit', :default => t("helpers.links.edit")),edit_product_item_path(product_item), :class => 'btn btn-mini' %>
-				<%= link_to t('.destroy', :default => t("helpers.links.destroy")),product_item_path(product_item),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %>
+<% if !@product_items.present? %>
+	Sorry!! No Products Found
+<% else %>
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th><%= model_class.human_attribute_name(:id) %></th>
+				<th><%= model_class.human_attribute_name(:title) %></th>
+				<th><%= model_class.human_attribute_name(:available_quantity) %></th>
+				<th><%= model_class.human_attribute_name(:description) %></th>
+				<th><%= model_class.human_attribute_name(:price) %></th>
+				<th><%= model_class.human_attribute_name(:is_active) %></th>
+				<th><%=t '.actions', :default => t("helpers.actions") %></th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @product_items.each do |product_item| %>
+				<tr>
+					<td><%= link_to product_item.id, product_item_path(product_item) %></td>
+					<td><%= product_item.title %></td>
+					<td><%= product_item.available_quantity %></td>
+					<td><%= product_item.description %></td>
+					<td><%= product_item.price %></td>
+					<td><%= product_item.is_active %></td>
+					<td>
+				<%if product_item.user_id == current_user.id %>
+					<%= link_to t('.edit', :default => t("helpers.links.edit")),edit_product_item_path(product_item), :class => 'btn btn-mini' %>
+					<%= link_to t('.destroy', :default => t("helpers.links.destroy")),product_item_path(product_item),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %>
+				<% end %>
+					</td>
+				</tr>
 			<% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+		</tbody>
+	</table>
+<% end %>
 
 <%= link_to t('.new', :default => "Create"),new_product_item_path,:class => 'btn btn-primary', :style=>"color:white;" %>
