--- a/app/views/product_items/_form.html.erb
+++ b/app/views/product_items/_form.html.erb
@@ -1,16 +1,17 @@
 <%= form_for @product_item, :html => { :class => 'form-horizontal', multipart: true  } do |f| %>
-<div class="control-group">
-    <%= f.label :pictures, :class => 'control-label' %>
-    <div class="controls">
-      <!-- The magic is coming ...look at my eyes....shazammmm -->
-      <!-- Use HTML5 multiple attribute to enable multiple selection
-           and pass back to controller all files as an array, ready 
-           for paperclip!!
-           file_field_tag, since images is not a gallery attribute
-       -->
-      <%= file_field_tag "images[]", type: :file, :multiple => true %>
-    </div>
-  </div>
+	<div class="control-group">
+		<%= f.label :pictures, :class => 'control-label' %>
+		<div class="controls">
+			<% if @product_item.pictures.present?%>
+				<% @product_item.pictures.each do |picture|%>
+					<%= image_tag picture.image.url(:thumb) %>
+				<% end %>
+				<%= file_field_tag "images[]", type: :file, :multiple => true %>
+			<%else%>
+				<%= file_field_tag "images[]", type: :file, :multiple => true %>
+			<%end%>
+		</div>
+	</div>
 
   <div class="control-group">
     <%= f.label :title, :class => 'control-label' %>
