search for products implemented

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -64,10 +64,18 @@
 
 	<!-- Site banner -->
 	<div class="banner" >
-	<div class="container" >
-	<h1>Shop Me</h1>
-	<p>It's amazing how easy the Internet makes it to destroy a business without creating another one in its place.</p>
-	</div>
+		<div class="container" >
+			<h1>Shop Me</h1>
+			<!--p>It's amazing how easy the Internet makes it to destroy a business without creating another one in its place.</p-->
+			<form action="/home/search">
+				<center>
+					<div>
+						<span style="font-size:25px;">Search</span>&nbsp;&nbsp;&nbsp;
+						<input type="text" name="key"placeholder="search here" align="right" style="height:30px;width:500px;">
+					</div>
+				</center>
+			</form>
+		</div>
 	</div>
 
 	<!-- Include jQuery and bootstrap JS plugins -->
