--- a/app/views/product_items/show.html.erb
+++ b/app/views/product_items/show.html.erb
@@ -1,8 +1,12 @@
 <%- model_class = ProductItem -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+  <h1><%= @product_item.title%></h1>
 </div>
-
+<% if @product_item.pictures.present?%>
+	<% @product_item.pictures.each do |f|%>
+		<%=image_tag f.image.url(:thumb)%>
+	<% end %>
+<% end %>
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
   <dd><%= @product_item.title %></dd>
@@ -12,8 +16,6 @@
   <dd><%= @product_item.description %></dd>
   <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
   <dd><%= @product_item.price %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
-  <dd><%= @product_item.user_id %></dd>
   <dt><strong><%= model_class.human_attribute_name(:is_active) %>:</strong></dt>
   <dd><%= @product_item.is_active %></dd>
 </dl>
