--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,6 @@
 					<li><a href="/home/info_graphics">Ecommerce Overview</a></li>
 				
 					<% if user_signed_in? %>
-
 						<% if !current_user.profile_detail.nil? %>
 							<% @profile_id = ProfileDetail.find_by_user_id(current_user.id) %>
 							<li><%= link_to "Profile", edit_profile_detail_path(@profile_id)%> 
@@ -31,7 +30,7 @@
 								</ul>
 							</li>
 						<%end%>
-						<% if User.admin?(current_user) %>
+						<% if User.find_role?(current_user) == "A"%>
 							<li><%= link_to "Users", users_path %> </li>
 							<li><%= link_to "Retailers", retailer_requests_admins_path %> 
 							<ul>
@@ -48,8 +47,11 @@
 							</li>
 						<%end%>
 						<li><%= link_to "Products", product_items_path %> </li>
-						<% if User.retailer?(current_user)%>
+						<% if User.find_role?(current_user) == "B"%>
 							<li><%= link_to "Products", product_items_path %> </li>
+						<%end%>
+							<% if User.find_role?(current_user) == "C"%>
+							<li><%= link_to "My Cart", product_items_path %> </li>
 						<%end%>
 							<li><%= link_to "Logout", destroy_user_session_path, :method=> :delete%></li>
 
