--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -51,7 +51,11 @@
 							<li><%= link_to "Products", product_items_path %> </li>
 						<%end%>
 							<% if User.find_role?(current_user) == "C"%>
-							<li><%= link_to "My Cart", product_items_path %> </li>
+							<%if current_user.cart.product_item_ids && current_user.cart.product_item_ids%>
+								<li><%= link_to "My Cart (#{current_user.cart.product_item_ids.count})", carts_path %> </li>
+							<%else%>
+								<li><%= link_to "My Cart", carts_path %> </li>
+							<% end %>
 						<%end%>
 							<li><%= link_to "Logout", destroy_user_session_path, :method=> :delete%></li>
 
