--- a/app/views/product_items/index.html.erb
+++ b/app/views/product_items/index.html.erb
@@ -24,7 +24,11 @@
 				<%= link_to t('.destroy', :default => t("helpers.links.destroy")),product_item_path(product_item),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %>
 			<% end %>
 		</div>
-		<%= link_to t('.new', :default => "Add to Mycart"),new_cart_path,:class => 'btn btn-primary', :style=>"color:white;" %>
+		<!--%if @cart_items.nil?%-->
+			<%= link_to t('.new', :default => "Add to Mycart"),my_cart_carts_path(:user_id=>current_user.id, :product_item_ids=>product_item.id),:class => 'btn btn-primary', :style=>"color:white;" %>
+		<!--%else%>
+		Already Added in you cart
+		<!--%end%-->
 	</div>
 	<% end %>
 <% end %>	
@@ -34,37 +38,4 @@
 
 
 <%= will_paginate @product_items, renderer: BootstrapPagination::Rails %>
-	<!--table class="table table-striped">
-		<thead>
-			<tr>
-				<th><%= model_class.human_attribute_name(:id) %></th>
-				<th><%= model_class.human_attribute_name(:title) %></th>
-				<th><%= model_class.human_attribute_name(:available_quantity) %></th>
-				<th><%= model_class.human_attribute_name(:description) %></th>
-				<th><%= model_class.human_attribute_name(:price) %></th>
-				<th><%= model_class.human_attribute_name(:is_active) %></th>
-				<th><%=t '.actions', :default => t("helpers.actions") %></th>
-			</tr>
-		</thead>
-		<tbody>
-			<% @product_items.each do |product_item| %>
-				<tr>
-					<td><%= link_to product_item.id, product_item_path(product_item) %></td>
-					<td><%= product_item.title %></td>
-					<td><%= product_item.available_quantity %></td>
-					<td><%= product_item.description %></td>
-					<td><%= product_item.price %></td>
-					<td><%= product_item.is_active %></td>
-					<td>
-				<%if product_item.user_id == current_user.id %>
-					<%= link_to t('.edit', :default => t("helpers.links.edit")),edit_product_item_path(product_item), :class => 'btn btn-mini' %>
-					<%= link_to t('.destroy', :default => t("helpers.links.destroy")),product_item_path(product_item),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %>
-				<% end %>
-					</td>
-				</tr>
-			<% end %>
-		</tbody>
-	</table-->
-
-
-
+	
