--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -5,6 +5,7 @@
 <% if !@cart.present? %>
 	Sorry!! No Products Found
 <% else %>
+	<%@cart_id = @cart.id%>
 	<% @cart.product_item_ids.each do |product_item| %>
 	<div class="divOuter">
 		<div class="divInner1"> 
@@ -25,11 +26,12 @@
 				<%= link_to t('.destroy', :default => t("helpers.links.destroy")),product_item_path(product_item),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %>
 			<% end %>
 		</div>
+			<%= link_to t('.destroy', :default => "Remove"),remove_from_my_cart_carts_path(:product_id=>product_item.id),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %>
 		</div>
 	<% end %>
 <% end %>	
-<%if current_user.role_type == "ADMIN" || current_user.role_type == "RETAILER"%>
-	<%= link_to t('.new', :default => "Create"),new_product_item_path,:class => 'btn btn-primary', :style=>"color:white;" %>
-<%end%>
+
+
+
 
 
