--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,8 +13,8 @@
 					<li class="highlight"><a href="#">Home</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">Contact</a></li>
-					<li><a href="/home/info_graphics">Ecommerce Overview</a></li>
-				
+					<li><a href="/home/info_graphics_ecommerce">Ecommerce Overview</a></li>
+					<li><%= link_to "Youtube Overview", "/home/info_graphics_youtube"%></li>
 					<% if user_signed_in? %>
 						<% if !current_user.profile_detail.nil? %>
 							<% @profile_id = ProfileDetail.find_by_user_id(current_user.id) %>
