--- a/app/views/product_items/index.html.erb
+++ b/app/views/product_items/index.html.erb
@@ -1,3 +1,5 @@
+<p class="notice_msg"><%= notice %></p>
+<p class="alert_msg"><%= alert %></p>
 <%- model_class = ProductItem -%>
 <div class="page-header">
   <h1>Products</h1>
