--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,26 +1,20 @@
 <div class="register_account">
 	<div class="wrap">
 		<h4 class="title">Create an Account</h4>
-		<form action="/registrations" method="post">
+		<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+			<%= devise_error_messages! %>
 			<div class="col_1_of_2 span_1_of_2">
-				<div><input type="text" value="name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}"></div>
-				<div><input type="text" value="email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'E-Mail';}"></div>
-				<div><input type="text" value="password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'password';}"></div>	
-				<div><input type="text" value="password_confirmation" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'password confirmation';}"></div>
-			</div>
-		
-			<div class="col_1_of_2 span_1_of_2">	
-				<div><input type="text" value="Address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Address';}"></div>
-				<div><input type="text" value="City" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'City';}"></div>
+				<div><%= f.text_field :name,:value=>"Name",:onfocus=>"this.value = '';" ,:onblur=>"if (this.value == '') {this.value = 'Name';}"%></div>
+				<div><input type="text" name="user[email]" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'E-Mail';}"></div>
+				<div><input type="text" name="user[password]" value="Password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'password';}"></div>	
+				<div><input type="text" name="user[password_confirmation]" value="Password Confirmation" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'password confirmation';}"></div>
 				<div>
+				<%= f.button "Sign up", :class=>"grey" %>
+				<p class="terms">By clicking 'Create Account' you agree to the <a href="#">Terms &amp; Conditions</a>.</p>
 				</div>
-				<input type="text" value="" class="code"> - <input type="text" value="" class="number">
-				<p class="code">Country Code + Phone Number</p>
 			</div>
-			 <button class="grey">Submit</button>
-			<p class="terms">By clicking 'Create Account' you agree to the <a href="#">Terms &amp; Conditions</a>.</p>
 			<div class="clear"></div>
-		</form>
+		<% end %>
 	</div>
 </div>
     
