Added new design template for User login

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
 					<li class="active"><a href="login.html">Account</a></li> |
 					<li><a href="checkout.html">Wishlist</a></li> |
 					<li><a href="checkout.html">Checkout</a></li> |
-					<li><a href="login.html">Log In</a></li> |
+					<li><%=link_to "Log In", sign_in_path%></li> |
 					<li><%=link_to "Sign Up", new_user_registration_path%></li>
 				</ul>
 			</div>
