Added logout fun with new template

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,11 @@
    				    <div class="clear"></div>
    			 </div>
 			 <div class="cssmenu">
+				<% if user_signed_in? %>
+				<ul>
+					<li><%= link_to "Logout", destroy_user_session_path, :method=> :delete%></li>
+				</ul>
+				<%else%>
 				<ul>
 					<li class="active"><a href="login.html">Account</a></li> |
 					<li><a href="checkout.html">Wishlist</a></li> |
@@ -26,6 +31,8 @@
 					<li><%=link_to "Log In", sign_in_path%></li> |
 					<li><%=link_to "Sign Up", new_user_registration_path%></li>
 				</ul>
+				<%end%>
+				
 			</div>
 			<div class="clear"></div>
  		</div>
