--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>Free Leoshop Website Template | Home :: w3layouts</title>
+		<!--%= stylesheet_link_tag    "application" %-->
+		<%= javascript_include_tag "application" %>
+		<%= csrf_meta_tags %>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link href="/assets/leoshop-css/style.css" rel="stylesheet" type="text/css" media="all" />
