--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,6 +23,8 @@
 					<li class="active"><a href="login.html">Account</a></li> |
 					<li><a href="checkout.html">Wishlist</a></li> |
 					<li><a href="checkout.html">Checkout</a></li> |
+					<li><a href="/home/info_graphics_ecommerce">Ecommerce</a></li> |
+					<li><a href="/home/info_graphics_youtube">Youtube</a></li> |
 					<li><%=link_to "Log In", sign_in_path%></li> |
 					<li><%=link_to "Sign Up", new_user_registration_path%></li>
 				</ul>
@@ -151,4 +153,5 @@
      <div class="clear"></div>
      </div>
 	</div>
+
   
