--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Free Leoshop Website Template | Home :: w3layouts</title>
-		<!--%= stylesheet_link_tag    "application" %-->
+		<%= stylesheet_link_tag    "application" %>
 		<%= javascript_include_tag "application" %>
 		<%= csrf_meta_tags %>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
